# unitech_bot

./: CMakeLists.txt  main.cpp
data/: groups.json  schedule.json  users.json
utils/: schedule_updater.cpp  schedule_updater.h
